Add guided-diffusion as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "external/segment-anything"]
 	path = external/segment-anything
 	url = https://github.com/facebookresearch/segment-anything.git
+
+[submodule "external/guided-diffusion"]
+	path = external/guided-diffusion
+	url = https://github.com/openai/guided-diffusion.git
